feat(interaction): 更新行为记录和商品动态功能
- 在ActionRecordBO中添加店铺ID字段，支持店铺上新等行为记录
- 修改博客服务中缓存查询方法，添加锁前缀参数以增强缓存管理
- 重构CacheClient类中的逻辑过期缓存设置，统一使用固定物理过期时间
- 在FeedService中完善商品动态聚合逻辑，支持店铺信息展示
- 添加商品DTO中的店铺相关信息展示，包括店铺名称和logo
- 优化多级缓存管理器RedisMultiCacheManager，支持异步缓存重建
- 在评论和商品服务中更新缓存查询逻辑，添加锁前缀参数
- 完善商品上新消息推送机制，支持多店铺关联的商品动态发布
- 在DTO类中添加JsonIgnoreProperties注解，忽略未知字段防止解析错误
- 重构Redis缓存常量类，添加各类数据对应的锁键常量定义